scripts/simple_cluster_config/ingress/green-blue/virtual-host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fan-out-ingress
  namespace: ingress-green-blue
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - path: /blue(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: blue-web
            port:
              number: 80
        pathType: ImplementationSpecific
      - path: /green(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: green-web
            port:
              number: 80
        pathType: ImplementationSpecific
